--- a/src/app/components/main/welcome/welcome.component.html
+++ b/src/app/components/main/welcome/welcome.component.html
@@ -1,1 +1,7 @@
-<p>welcome works!</p>
+<div class="container">
+  <div class="text-center">
+    <p>SISTEMA DE GESTION ENERGETICA EN PLANTAS</p>
+    <hr>
+    <p-button label="Ingresar" />
+  </div>
+</div>
