--- a/src/app/components/main/welcome/welcome.component.html
+++ b/src/app/components/main/welcome/welcome.component.html
@@ -1,7 +1,10 @@
 <div class="container">
+
   <div class="text-center">
-    <p>SISTEMA DE GESTION ENERGETICA EN PLANTAS</p>
+    <p><strong>ENERGIA360</strong></p>
+    <p><strong>SISTEMA DE GESTION ENERGETICA EN PLANTAS</strong></p>
     <hr>
+    <!-- <button class="btn btn-primary btn-xl" class="btnWelcome">Ingresar</button> -->
     <p-button label="Ingresar" />
   </div>
 </div>
