--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="layout">
-  <app-welcome></app-welcome>
-
+  <!-- <app-welcome></app-welcome> -->
+<router-outlet></router-outlet>
 </div>
 
 
