--- a/src/app/components/main/welcome/welcome.component.html
+++ b/src/app/components/main/welcome/welcome.component.html
@@ -5,6 +5,6 @@
     <p><strong>SISTEMA DE GESTION ENERGETICA EN PLANTAS</strong></p>
     <hr>
     <!-- <button class="btn btn-primary btn-xl" class="btnWelcome">Ingresar</button> -->
-    <p-button label="Ingresar" />
+    <p-button label="Ingresar" routerLink="/login"/>
   </div>
 </div>
