--- a/src/app/components/main/login/login.component.html
+++ b/src/app/components/main/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<div class="container">
+  <div class="row" style="width: 100%;">
+    <div class="col-lg-6 offset-lg-3">
+      <div class="card text-center" style="padding: 30px;">
+        <h3>Login</h3>
+        <br>
+        <form>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="usuario">
+          </div>
+          <div class="form-group mt-2">
+            <input type="text" class="form-control" placeholder="contraseña">
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary m-2">Aceptar</button>
+            <button class="btn btn-secondary" routerLink="/welcome">Volver</button>
+          </div>
+
+        </form>
+      </div>
+    </div>
+
+  </div>
+</div>
