--- a/src/app/components/main/login/login.component.html
+++ b/src/app/components/main/login/login.component.html
@@ -4,12 +4,12 @@
       <div class="card text-center" style="padding: 30px;">
         <h3>Login</h3>
         <br>
-        <form>
+        <form [formGroup]="loginForm" (ngSubmit)="loggin()">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="usuario">
+            <input type="text" class="form-control" placeholder="usuario" formControlName="usuario">
           </div>
           <div class="form-group mt-2">
-            <input type="text" class="form-control" placeholder="contraseña">
+            <input type="text" class="form-control" placeholder="contraseña" formControlName="password">
           </div>
           <div class="form-group">
             <button class="btn btn-primary m-2">Aceptar</button>
