--- a/src/app/components/main/login/login.component.html
+++ b/src/app/components/main/login/login.component.html
@@ -5,14 +5,16 @@
         <h3>Login</h3>
         <br>
         <form [formGroup]="loginForm" (ngSubmit)="loggin()">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="usuario" formControlName="usuario">
+          <div class="form-group" style="text-align: start;">
+            <input type="text" class="form-control" placeholder="usuario" formControlName="nameUserForm">
+            <span class="text-danger p-1" *ngIf="loginForm.get('nameUserForm')?.hasError('required') && loginForm.get('nameUserForm')?.touched">El usuario es requerido</span>
           </div>
-          <div class="form-group mt-2">
-            <input type="text" class="form-control" placeholder="contraseña" formControlName="password">
+          <div class="form-group mt-2" style="text-align: start;">
+            <input type="password" class="form-control" placeholder="contraseña" formControlName="passwordForm">
+            <span class="text-danger p-1" *ngIf="loginForm.get('passwordForm')?.hasError('required') && loginForm.get('passwordForm')?.touched">La contraseña es requerida</span>
           </div>
           <div class="form-group">
-            <button class="btn btn-primary m-2">Aceptar</button>
+            <button class="btn btn-primary m-2" [disabled]="loginForm.invalid">Aceptar</button>
             <button class="btn btn-secondary" routerLink="/welcome">Volver</button>
           </div>
 
