--- a/src/app/components/main/welcome/welcome.component.html
+++ b/src/app/components/main/welcome/welcome.component.html
@@ -2,9 +2,10 @@
 
   <div class="text-center">
     <p><strong>ENERGIA360</strong></p>
-    <p><strong>SISTEMA DE GESTION ENERGETICA EN PLANTAS</strong></p>
+    <p class="mt-5"><strong>SISTEMA DE GESTION ENERGETICA EN PLANTAS</strong></p>
     <hr>
     <!-- <button class="btn btn-primary btn-xl" class="btnWelcome">Ingresar</button> -->
-    <p-button label="Ingresar" routerLink="/login"/>
+    <!-- <button type="button" class="btn btn-primary" routerLink="/welcome/login">Primary Button</button> -->
+    <button class="btn btn-primary btn-xl" routerLink="/welcome/login">INGRESAR</button>
   </div>
 </div>
