--- a/src/app/components/main/login/login.component.html
+++ b/src/app/components/main/login/login.component.html
@@ -14,8 +14,11 @@
             <span class="text-danger p-1" *ngIf="loginForm.get('passwordForm')?.hasError('required') && loginForm.get('passwordForm')?.touched">La contraseña es requerida</span>
           </div>
           <div class="form-group">
-            <button class="btn btn-primary m-2" [disabled]="loginForm.invalid">Aceptar</button>
+            <button class="btn btn-primary m-2" [disabled]="loginForm.invalid" routerLink="/dashboard">Aceptar</button>
             <button class="btn btn-secondary" routerLink="/welcome">Volver</button>
+          </div>
+          <div class="form-group">
+            <a  style="color:red; cursor: pointer" routerLink="/welcome/register">Crear cuenta</a>
           </div>
 
         </form>
