--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="#" class="nav-link px-2 text-secondary" routerLink="/dashboard/create/mapGeoLoc">Localizacion</a></li>
-        <li><a href="#" class="nav-link px-2 text-white" routerLink="/dashboard/create/info">DatosPlanta</a></li>
+        <li><a href="#" class="nav-link px-2 text-white" routerLink="/dashboard/info">DatosPlanta</a></li>
         <li><a href="#" class="nav-link px-2 text-white" routerLink="/dashboard/create">Nueva Planta</a></li>
         <li><a href="#" class="nav-link px-2 text-white" routerLink="/dashboard/updatePlants">Actualizar Planta</a></li>
       </ul>
@@ -17,19 +17,7 @@
 
       <div class="text-end">
         <button type="button" class="btn btn-outline-light me-2">Logout</button>
-        <!-- <button type="button" class="btn btn-warning">Sign-up</button> -->
-      </div>
+        <button type="button" class="btn btn-warning">Sign-up</button>
+</div>
     </div>
 </header>
-
-
-<!-- <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal">Nombre de la empresa</h5>
-  <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" href="#">Características</a>
-    <a class="p-2 text-dark" href="#">Empresa</a>
-    <a class="p-2 text-dark" href="#">Support</a>
-    <a class="p-2 text-dark" href="#">Pricing</a>
-  </nav>
-  <a class="btn btn-outline-primary" href="#"> Sign up </a>
-</div> -->
