--- a/src/app/components/main/welcome/welcome.component.html
+++ b/src/app/components/main/welcome/welcome.component.html
@@ -3,9 +3,10 @@
   <div class="text-center">
     <p><strong>ENERGIA360</strong></p>
     <p class="mt-5"><strong>SISTEMA DE GESTION ENERGETICA EN PLANTAS</strong></p>
-    <hr>
+    <hr class="centered-hr">
     <!-- <button class="btn btn-primary btn-xl" class="btnWelcome">Ingresar</button> -->
     <!-- <button type="button" class="btn btn-primary" routerLink="/welcome/login">Primary Button</button> -->
     <button class="btn btn-primary btn-xl" routerLink="/welcome/login">INGRESAR</button>
   </div>
+
 </div>
