--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
-<app-navbar></app-navbar>
-<div class="container">
-  <router-outlet></router-outlet>
+<div class="row">
+  <app-navbar></app-navbar>
 </div>
+<div class="row">
+    <router-outlet></router-outlet>
+</div>
+
