--- a/src/app/components/dashboard/energy-plants/energy-plants.component.scss
+++ b/src/app/components/dashboard/energy-plants/energy-plants.component.scss
@@ -1,3 +1,46 @@
-mat-grid-tile {
-  background: lightblue;
+// mat-grid-tile {
+//   background: lightblue;
+// }
+
+// mat-grid-list {
+//   width: 100%;
+//   height: 100%;
+// }
+
+// .flex-container {
+//   display: flex;
+//   flex-wrap: wrap;
+//   height: 100vh;
+// }
+
+// .flex-item {
+//   flex: 1 0 50%; /* Cada ítem ocupa el 50% del ancho */
+//   display: flex;
+//   //align-items: center;
+//   //justify-content: center;
+//   border: 1px solid #ccc; /* Opcional, para visualización */
+//   box-sizing: border-box;
+// }
+
+.full-height{
+  height: 50vh;
+}
+
+#chartGraficaLinea {
+  width: 100%;
+  height: 500px;
+  max-width: 100%;
+}
+
+#chartGraficaBarras {
+  width: 100%;
+  height: 500px;
+  max-width: 100%;
+}
+
+.full-height {
+  height: 50vh; /* Cada sección ocupará el 50% del alto de la pantalla */
+}
+.overflow-auto {
+  overflow-y: auto; /* Permitir desplazamiento vertical si el contenido se desborda */
 }
