--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="#" class="nav-link px-2 text-secondary" routerLink="/dashboard/create/mapGeoLoc">Localizacion</a></li>
-        <li><a href="#" class="nav-link px-2 text-white" routerLink="/dashboard/info">DatosPlanta</a></li>
+        <!-- <li><a href="#" class="nav-link px-2 text-white" routerLink="/dashboard/info">DatosPlanta</a></li> -->
         <li><a href="#" class="nav-link px-2 text-white" routerLink="/dashboard/create">Nueva Planta</a></li>
         <li><a href="#" class="nav-link px-2 text-white" routerLink="/dashboard/updatePlants">Actualizar Planta</a></li>
       </ul>
