--- a/src/app/components/dashboard/create-plants/create-plants.component.html
+++ b/src/app/components/dashboard/create-plants/create-plants.component.html
@@ -1,9 +1,7 @@
-<!-- <div class="col-6  border">-->
 <div class="row">
   <div class="col p-5">
-    <!-- <div class="container"> -->
     <h2>Creacion de planta</h2>
-    <form [formGroup]="plantaFormNew">
+    <form [formGroup]="plantaFormNew" (ngSubmit)="onSubmit()">
       <!--Fila 1-->
       <div class="row">
         <div class="col-4">
@@ -146,12 +144,8 @@
         </div>
       </div>
 
-
-
-
+      <button type="submit" class="btn btn-primary mt-5 float-end">Enviar</button>
 
     </form>
   </div>
 </div>
-<!-- </div>
-</div> -->
