--- a/src/app/components/dashboard/create-plants/create-plants.component.html
+++ b/src/app/components/dashboard/create-plants/create-plants.component.html
@@ -146,6 +146,8 @@
 
       <button type="submit" class="btn btn-primary mt-5 float-end">Enviar</button>
 
+      <button class="btn btn-primary mt-5 float-end m-3" routerLink="/dashboard">Volver</button>
+
     </form>
   </div>
 </div>
